# Rash_Projects

./: .env.example  .gitignore  README.md  ai_analyzer.py  api_test.py  app.py  config.py  gemini_test.py  requirements.txt  resume_analyzer.py
ExamPaperGenrater/: about.html  add-question.html  generate-paper.html  index.html  login.html  view-questions.html
ExamPaperGenrater/php/: db.php  generate_paper.php  submit_question.php  test_db_connection.php
static/js/: main.js
summerpep/: .env.example  .gitignore  README.md  test_backend.js
summerpep/backend/: CMakeLists.txt  README.md
summerpep/backend/include/: Graph.h
summerpep/backend/src/: Graph.cpp  main.cpp
summerpep/frontend/: about.html  analysis.html  auth.html  index.html
summerpep/frontend/css/: styles.css
summerpep/frontend/js/: app.js  auth.js  landing.js  network.js  visualization.js
summerpep/server/: current_network.json  package-lock.json  package.json  server.js
summerpep/server/data/users/: index.json  user_1752062743014_sc0if8s61.json
summerpep/server/middleware/: auth.js
summerpep/server/models/: User.js
templates/: index.html  login.html  resume.html  settings.html  signup.html
